--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -6,7 +6,7 @@
   <title>Demo</title>
   <script src="/vendor.js"></script>
   <script src="/app.js"></script>
-  <script>require('initialize');</script>
+  <script>require('app.js');</script>
 </head>
 <body>
   <div id="app"></div>
